--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </div>
   </div>
 
-  <script>
+  <!-- <script>
       function CountBox() {
         dateNow = new Date();
         amount = ((23 - dateNow.getHours())*60*60 + (59 - dateNow.getMinutes())*60 + (60 - dateNow.getSeconds()))*1000;
@@ -122,7 +122,7 @@
         CountBox()
       }
     </script>
-<div id="countbox"></div>
+<div id="countbox"></div> -->
 
   <button class="button action__button">
     узнать подробнее
