--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Marck+Script&display=swap&subset=cyrillic" rel="stylesheet">
 
-  
 </head>
 <body>
 
-<header class="header__outer">
-  <div class="header">
+<header class="header">
       <div class="container header__container">
 
           <div class="logo">
@@ -49,7 +47,6 @@
           </div>
       
         </div>
-  </div>
 </header>
 
 <section class="action">
